refactored to use biplane web server

--- a/source/assets/styles.css
+++ b/source/assets/styles.css
@@ -28,6 +28,16 @@ div.list div:before {
 
 }
 
-.proximity-beacon-label {
-    width: 10rem;
+.proximity-config-label {
+    flex: 0 0 10rem !important;
 }
+
+
+.proximity-beacon-label {
+    flex: 0 0 10rem !important;
+}
+
+
+
+
+
