--- a/source/assets/styles.css
+++ b/source/assets/styles.css
@@ -1,11 +1,19 @@
+html, body {
+    height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 div.list {
     counter-reset: list-number;
 
     font-family: monospace;
     overflow-y: scroll;
-    border-radius: 4px;
     border: 1px solid black;
-    height: 20rem;
+    __height: 20rem;
     line-height: normal;
 }
 
@@ -21,11 +29,6 @@ div.list div:before {
     padding-right: 0.5rem;
     margin-right: 0.5rem;
     text-align: end;
-
-    background-color: var(--bs-dark-bg-subtle) !important;
-
-    border-right: 2px solid gray;
-
 }
 
 .proximity-config-label {
@@ -37,7 +40,39 @@ div.list div:before {
     flex: 0 0 8rem !important;
 }
 
+.application {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+}
 
+
+
+
+::-webkit-scrollbar {
+    width: 16px;
+    height: 16px;
+    background-color: inherit;
+}
+
+::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    -webkit-border-radius: 16px;
+    background-color: rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+}
+
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
+
+::-webkit-scrollbar-corner {
+    _background-color: transparent;
+}
 
 
 
